--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,9 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '23.0.1'
+    compileOptions.incremental = false
+
 
     defaultConfig {
         minSdkVersion 18
@@ -32,5 +34,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile 'no.nordicsemi.android:dfu:1.3.0'
 }
   
