--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.pilloxa">
+    <application>
+        <service android:name=".DfuService"/>
+    </application>
 
 </manifest>
   
