--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -91,7 +91,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         applicationId "com.nordicdfuexample"
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fetch-blob')
     compile project(':react-native-nordic-dfu')
     compile project(':react-native-ble-manager')
     compile fileTree(dir: "libs", include: ["*.jar"])
