--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,10 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native-nordic-dfu": "file:../",
 		"react-native": "0.45.1",
-		"react-native-ble-manager": "^5.1.1"
+		"react-native-ble-manager": "^5.1.1",
+		"react-native-fetch-blob": "^0.10.6",
+		"react-native-nordic-dfu": "file:../"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
